--- a/styles.css
+++ b/styles.css
@@ -116,8 +116,9 @@ form > div:first-child {
 }
 
 input#checkbox {
-  height: 3.1rem;
-  width: 3.1rem;
+  height: 2.4rem;
+  width: 2.4rem;
+  border-radius: 8px !important;
 }
 
 .input-wrapper.checkbox-wrapper {
@@ -193,7 +194,9 @@ input[type="submit"]{
   border-radius: .8rem;
 }
 
-
+input[type="submit"]:hover{
+  filter: brightness(.9);
+}
 /*Queries*/
 
 @media(min-width: 768px){
